--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@fortawesome/fontawesome-free": "^5.12.0",
+    "@nicky-lenaers/ngx-scroll-to": "^3.0.1",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
+    "ng2-scroll-to-el": "^1.2.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
